syntax = "proto3";

package task;

option go_package = "github.com/NicolasDutronc/goblins/task";

message Task {

    enum TaskType {
        WORKFLOW_TASK = 0;
        ACTIVITY_TASK = 1;
    }
  
    TaskType task_type = 1;
    string workflow_id = 2;
    string workflow_run_id = 3;
    string activity_id = 4;
    string activity_run_id = 5;
    int32 activity_max_retries = 6;
    int32 activity_current_try = 7;
    bytes input = 8;
  }